# voltrum

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh  compile-shaders.bat  compile-shaders.sh  post-build.bat  post-build.sh
assets/fonts/: jetbrains_bold.embed  jetbrains_italic.embed  jetbrains_regular.embed
assets/icons/: voltrum_icon.embed
assets/materials/: test_material.vol
assets/shaders/: Builtin.GridShader.frag.glsl  Builtin.GridShader.vert.glsl  Builtin.MaterialShader.frag.glsl  Builtin.MaterialShader.vert.glsl  Builtin.ObjectShader.vert.glsl
assets/textures/: window_icons.embed
client/: CMakeLists.txt
client/src/: app_viewport_layer.cpp  app_viewport_layer.hpp  entry.cpp  global_client_state.hpp
client/src/debug/: debug_layer.cpp  debug_layer.hpp
client/src/editor/: editor_layer.cpp  editor_layer.hpp
client/src/editor/components/: viewport_component.cpp  viewport_component.hpp
client/src/footer/: footer_content.cpp  footer_content.hpp
client/src/titlebar/: titlebar_content.cpp  titlebar_content.hpp
client/src/ui/: client_ui.cpp  client_ui.hpp
client/src/utilities/: utilities_layer.cpp  utilities_layer.hpp
client/src/utilities/components/: command_palette_component.cpp  command_palette_component.hpp  settings_component.cpp  settings_component.hpp  theme_selector_component.cpp  theme_selector_component.hpp  toolbar_component.cpp  toolbar_component.hpp
core/: CMakeLists.txt
core/src/: client_types.hpp  defines.hpp  entry.hpp
core/src/core/: absolute_clock.cpp  absolute_clock.hpp  application.cpp  application.hpp  asserts.hpp  frame_context.hpp  logger.cpp  logger.hpp  string.cpp  string.hpp  thread_context.cpp  thread_context.hpp
core/src/data_structures/: auto_array.hpp  dynamic_array.hpp  hash_map.hpp  hashmap.hpp  memory_pool.hpp  ring_queue.hpp
core/src/events/: events.cpp  events.hpp
core/src/input/: input.cpp  input.hpp  input_codes.cpp  input_codes.hpp
core/src/math/: math.cpp  math.hpp  math_types.hpp  transform.cpp  transform.hpp
core/src/memory/: allocator.hpp  arena.cpp  arena.hpp  arena_debug.cpp  arena_debug.hpp  memory.cpp  memory.hpp  memory_arena.cpp  memory_arena.hpp
core/src/platform/: filesystem.cpp  filesystem.hpp  platform.cpp  platform.hpp  platform_darwin.cpp  platform_linux.cpp  platform_macos.cpp  platform_win32.cpp
core/src/renderer/: camera.cpp  camera.hpp  renderer_backend.cpp  renderer_backend.hpp  renderer_frontend.cpp  renderer_frontend.hpp  renderer_types.hpp
core/src/renderer/vulkan/: vulkan_backend.cpp  vulkan_backend.hpp  vulkan_buffer.cpp  vulkan_buffer.hpp  vulkan_command_buffer.cpp  vulkan_command_buffer.hpp  vulkan_device.cpp  vulkan_device.hpp  vulkan_image.cpp  vulkan_image.hpp  vulkan_pipeline.cpp  vulkan_pipeline.hpp  vulkan_platform.hpp  vulkan_renderpass.cpp  vulkan_renderpass.hpp  vulkan_shader_utils.cpp  vulkan_shader_utils.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp  vulkan_types.hpp  vulkan_ui.hpp  vulkan_ui_image.cpp  vulkan_utils.cpp  vulkan_utils.hpp  vulkan_viewport.cpp  vulkan_viewport.hpp
core/src/renderer/vulkan/shaders/: vulkan_grid_shader_pipeline.cpp  vulkan_grid_shader_pipeline.hpp  vulkan_imgui_shader_pipeline.cpp  vulkan_imgui_shader_pipeline.hpp  vulkan_material_shader.cpp  vulkan_material_shader.hpp  vulkan_material_shader_pipeline.cpp  vulkan_material_shader_pipeline.hpp  vulkan_object_shader.cpp  vulkan_object_shader.hpp
core/src/renderer/vulkan/ui_backend/: vulkan_ui_backend.cpp  vulkan_ui_backend.hpp
core/src/resources/: resource_types.hpp
core/src/resources/loaders/: binary_loader.cpp  binary_loader.hpp  font_loader.cpp  font_loader.hpp  icon_loader.cpp  icon_loader.hpp  image_loader.cpp  image_loader.hpp  material_loader.cpp  material_loader.hpp  text_loader.cpp  text_loader.hpp
core/src/systems/: geometry_system.cpp  geometry_system.hpp  material_system.cpp  material_system.hpp  resource_system.cpp  resource_system.hpp  texture_system.cpp  texture_system.hpp
core/src/ui/: icons.hpp  ui.cpp  ui.hpp  ui_animation.hpp  ui_config.hpp  ui_context.hpp  ui_fonts.cpp  ui_fonts.hpp  ui_footer.cpp  ui_footer.hpp  ui_themes.cpp  ui_themes.hpp  ui_titlebar.cpp  ui_titlebar.hpp  ui_types.hpp  ui_viewport.cpp  ui_widgets.hpp  ui_window_resize.cpp
core/src/ui/themes/: ayu_dark_theme.hpp  catppuccin_mocha_theme.hpp  catppuccin_theme.hpp  dark_theme.hpp  dracula_theme.hpp  everforest_theme.hpp  gruvbox_theme.hpp  kanagawa_theme.hpp  light_theme.hpp  nord_theme.hpp  one_dark_theme.hpp  rose_pine_theme.hpp  tokyo_theme.hpp
core/src/utils/: enum.hpp  str.cpp  str.hpp  string.cpp  string.hpp
docs/: BUILD_LINUX.md  BUILD_MACOS.md  BUILD_WINDOWS.md  CODE_GUIDE.md  TODO.md
tests/: CMakeLists.txt
tests/src/: expect.hpp  main.cpp  test_manager.cpp  test_manager.hpp
tests/src/containers/: hash_map_tests.cpp  hash_map_tests.hpp  hashmap_tests.cpp  hashmap_tests.hpp  ring_queue_tests.cpp  ring_queue_tests.hpp
tests/src/core/: str_tests.cpp  str_tests.hpp  string_tests.cpp  string_tests.hpp
